# weaver

./: .gitignore  README.md
firmware/: .cproject  .mxproject  .project  Makefile  STM32G071RBTX_FLASH.ld  weaver.ioc
firmware/src/: bme280.c  bme280.h  ccs811.c  ccs811.h  circular_buffer.c  circular_buffer.h  main.c  main.h  pc_uart.c  pc_uart.h  software_timer.c  software_timer.h  status_led.c  status_led.h  stm32g0xx_hal_conf.h  stm32g0xx_hal_msp.c  stm32g0xx_it.c  stm32g0xx_it.h  syscalls.c  sysmem.c  system_stm32g0xx.c  wifi.c  wifi.h
gui/: CMakeLists.txt
gui/src/: CMakeLists.txt  main_window.cpp  main_window.hpp  main_window.ui  version.hpp.in  weaver_gui.cpp  weaver_gui.qrc
gui/src/html/: about.html
gui/src/win32/: weaver_gui.rc
thingsboard/: dashboard.json  device_profile.json
